// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form 2 should form display required error when value are invalid 1`] = `
<DocumentFragment>
  <section
    id="contact"
    title="contact"
  >
    <div
      class="row section-head"
    >
      <div
        class="two column header-col"
      >
        <h1>
          <span>
            contact.title
          </span>
        </h1>
      </div>
      <div
        class="ten column"
      >
        <p
          class="lead"
        >
          contact.description
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="eight column"
      >
        <form
          id="contactForm"
          name="contactForm"
          title="contact-form"
        >
          <fieldset>
            <div>
              <label
                for="contactEmail"
              >
                contact.message.email 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <input
                id="contactEmail"
                name="email"
                size="35"
                type="text"
              />
              <span
                class="error"
                role="alert"
              >
                * contact.form.required
              </span>
            </div>
            <div>
              <label
                for="contactSubject"
              >
                contact.message.subject
              </label>
              <input
                id="contactSubject"
                name="subject"
                size="35"
                type="text"
              />
            </div>
            <div>
              <label
                for="contactMessage"
              >
                contact.message.message 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <textarea
                cols="50"
                id="contactMessage"
                name="message"
                rows="8"
              />
              <span
                class="error"
                role="alert"
              >
                * contact.form.required
              </span>
            </div>
            <div
              class="submit cf"
            >
              <div
                class="btn-submit-wrapper"
              >
                <button
                  class="btn-submit"
                >
                  contact.message.submit
                </button>
              </div>
            </div>
          </fieldset>
        </form>
      </div>
      <aside
        class="four column footer-widgets"
      >
        <div
          class="widget widget_contact"
        >
          <h4
            class="title"
          >
            <a
              class=" vcard"
            >
              <i
                class="far fa-address-card fa-lg"
                title="about.download_vcf"
              />
            </a>
            contact.address
          </h4>
          <p
            class="address"
          >
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <span />
            </span>
            <br />
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <a
                href="https://click"
              />
            </span>
          </p>
        </div>
      </aside>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Form 2 should handle symfony form field validation error when sending email 1`] = `
<DocumentFragment>
  <section
    id="contact"
    title="contact"
  >
    <div
      class="row section-head"
    >
      <div
        class="two column header-col"
      >
        <h1>
          <span>
            contact.title
          </span>
        </h1>
      </div>
      <div
        class="ten column"
      >
        <p
          class="lead"
        >
          contact.description
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="eight column"
      >
        <form
          id="contactForm"
          name="contactForm"
          title="contact-form"
        >
          <fieldset>
            <div>
              <label
                for="contactEmail"
              >
                contact.message.email 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <input
                id="contactEmail"
                name="email"
                size="35"
                type="text"
              />
              <span
                class="error"
                role="alert"
              >
                * the error
              </span>
            </div>
            <div>
              <label
                for="contactSubject"
              >
                contact.message.subject
              </label>
              <input
                id="contactSubject"
                name="subject"
                size="35"
                type="text"
              />
            </div>
            <div>
              <label
                for="contactMessage"
              >
                contact.message.message 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <textarea
                cols="50"
                id="contactMessage"
                name="message"
                rows="8"
              />
            </div>
            <div
              class="submit cf"
            >
              <div
                class="btn-submit-wrapper"
              >
                <button
                  class="btn-submit"
                >
                  contact.message.submit
                </button>
              </div>
            </div>
          </fieldset>
        </form>
      </div>
      <aside
        class="four column footer-widgets"
      >
        <div
          class="widget widget_contact"
        >
          <h4
            class="title"
          >
            <a
              class=" vcard"
            >
              <i
                class="far fa-address-card fa-lg"
                title="about.download_vcf"
              />
            </a>
            contact.address
          </h4>
          <p
            class="address"
          >
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <span />
            </span>
            <br />
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <a
                href="https://click"
              />
            </span>
          </p>
        </div>
      </aside>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Form 2 should handle symfony form validation error when sending email 1`] = `
<DocumentFragment>
  <section
    id="contact"
    title="contact"
  >
    <div
      class="row section-head"
    >
      <div
        class="two column header-col"
      >
        <h1>
          <span>
            contact.title
          </span>
        </h1>
      </div>
      <div
        class="ten column"
      >
        <p
          class="lead"
        >
          contact.description
        </p>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="eight column"
      >
        <form
          id="contactForm"
          name="contactForm"
          title="contact-form"
        >
          <fieldset>
            <div>
              <label
                for="contactEmail"
              >
                contact.message.email 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <input
                id="contactEmail"
                name="email"
                size="35"
                type="text"
              />
            </div>
            <div>
              <label
                for="contactSubject"
              >
                contact.message.subject
              </label>
              <input
                id="contactSubject"
                name="subject"
                size="35"
                type="text"
              />
            </div>
            <div>
              <label
                for="contactMessage"
              >
                contact.message.message 
                <span
                  class="required"
                >
                  *
                </span>
              </label>
              <textarea
                cols="50"
                id="contactMessage"
                name="message"
                rows="8"
              />
              <span
                class="error"
                role="alert"
              >
                * form error
              </span>
            </div>
            <div
              class="submit cf"
            >
              <div
                class="btn-submit-wrapper"
              >
                <button
                  class="btn-submit"
                >
                  contact.message.submit
                </button>
              </div>
            </div>
          </fieldset>
        </form>
      </div>
      <aside
        class="four column footer-widgets"
      >
        <div
          class="widget widget_contact"
        >
          <h4
            class="title"
          >
            <a
              class=" vcard"
            >
              <i
                class="far fa-address-card fa-lg"
                title="about.download_vcf"
              />
            </a>
            contact.address
          </h4>
          <p
            class="address"
          >
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <span />
            </span>
            <br />
            <span
              class="protected-text  s893923648"
            >
              <style
                type="text/css"
              >
                .s893923648  * {
 unicode-bidi: bidi-override; direction: rtl; }
.s893923648  *:before {
 content: "" }
.s893923648  *:after {
 content: "" }

              </style>
              <a
                href="https://click"
              />
            </span>
          </p>
        </div>
      </aside>
    </div>
  </section>
</DocumentFragment>
`;
